# DeObfuscator

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  index.md  main.cpp  sonar-project.properties
.github/workflows/: cmake.yml
src/: CMakeLists.txt  main.cpp
src/include/: mainwindow.cpp  mainwindow.h  mainwindow.ui  programfieldsmodel.cpp  programfieldsmodel.h  programheader.cpp  programheader.h  programheader.ui  programheadertabs.cpp  programheadertabs.h  programheadertabs.ui  qmlwindow.cpp  qmlwindow.h  qmlwindow.h.autosave  utils.cpp  utils.h
src/include/curses/: CursesSingleton.h  borderpane.cpp  borderpane.h  scrollpane.h  text.h  view.h  viewgroup.cpp  viewgroup.h  window.cpp  window.h
src/include/curses/exceptions/: TerminalResourceException.h
src/include/curses2/: window.h
src/include/subwindows/: debuggermain.cpp  debuggermain.h  debuggermain.ui  programheader.cpp  programheader.h  programheader.ui  qmlmdisubwindow.cpp  qmlmdisubwindow.h
src/include/utils/: xmlsavestate.cpp  xmlsavestate.h
src/resources/: icons.qrc  qml.qrc
src/resources/qml/subwindows/: DebuggerMain.qml
